k8s/blueapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blue
  labels:
    cbase: ss
---

apiVersion: v1
kind: Pod
metadata:
  namespace: blue
  name: blueapp
  labels:
    app: blueapp
spec:
  containers:
  - image: cptdaks.azurecr.io/cpt/ss:1.0
    name: blueapp
    ports:
    - containerPort: 8080
      protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: blueapp
  namespace: blue
spec:
  selector:
    app: blueapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blueapp
  namespace: blue
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/waf-policy-for-path: /subscriptions/f474dec9-5bab-47a3-b4d3-e641dac87ddb/resourceGroups/cptdaks/providers/Microsoft.Network/ApplicationGatewayWebApplicationFirewallPolicies/cptdaksblue
spec:
  rules:
  - host: blue.cptdaks.org
    http:
      paths:
      - path: /
        backend:
          service:
            name: blueapp
            port:
              number: 80
        pathType: Exact
