k8s/colorapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: color
  labels:
    cbase: ss
# ---

# apiVersion: v1
# kind: Pod
# metadata:
#   namespace: color
#   name: greenapp
#   labels:
#     app: greenapp
# spec:
#   containers:
#   - image: cptdaks.azurecr.io/cpt/ss:1.0
#     imagePullPolicy: Always
#     name: greenapp
#     env:
#       - name: PORTHTTP
#         value: "8080"
#       - name: SCOLOR
#         value: "green"
#     ports:
#     - containerPort: 8080
#       protocol: TCP
# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: greensvc
#   namespace: color
# spec:
#   selector:
#     app: greenapp
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  namespace: color
  name: redapp
  labels:
    app: redapp
spec:
  containers:
  - image: cptdaks.azurecr.io/cpt/ss:1.0
    name: redapp
    imagePullPolicy: Always
    ports:
    - containerPort: 4040
      protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: redsvc
  namespace: color
spec:
  selector:
    app: redapp
  ports:
  - protocol: TCP
    port: 443
    targetPort: 4040

---

# apiVersion: v1
# kind: Secret
# metadata:
#   name: secret-tls
#   namespace: color
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVYVENDQTBXZ0F3SUJBZ0lVWSsvMUtJVy9yWmRqREkvMFFIa0UzWXN5SC84d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dURVhNQlVHQTFVRUF3d09ZM0IwWkdGbmR5NXZjbWNnUTBFd0hoY05Nakl3TWpBek1Ea3lORFUwV2hjTgpNak13TWpBek1Ea3lORFUwV2pCbU1Rc3dDUVlEVlFRR0V3SkVSVEVRTUE0R0ExVUVDQXdIUW1GMllYSnBZVEVQCk1BMEdBMVVFQnd3R1RYVnVhV05vTVJrd0Z3WURWUVFLREJCRlpHZGxJRVJsZG1Wc2IzQnRaVzUwTVJrd0Z3WUQKVlFRRERCQjBaWE4wTG1Od2RHUmhaM2N1YjNKbk1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQwpDZ0tDQWdFQTJTL01 [...]
#   tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlKS1FJQkFBS0NBZ0VBMlMvTWIxc0hicTExV3A3ZHFaZUl4TnJ1WUN6aDhCQjZVMEZZa0pjc3ZTem10bDNXCnFLSHFvTEVSMXBDcGs3Q2tUK3NqVUdEZzJ3M002ZWVabXpRU0dSNEdoVUdoMFBWamgyLzZHYU9PQ0JKeHB3NW4KRzhGYm5pakJLcVdsRW9tYXRaWDU2cFBhTFJydENuV1I5Y29VNXRFRFFUMkdoa0wvSW9tODlSUmdxdjR4eEVWVgo3WkNnSlp4dnQwZTlSN2p0S3BqRmQ3Uy9qSlUvb2U2RFJ0aWxlTHlRZW5ERlRxcHRGWFpNcjVsNFhlZU9WeExTCkV3NklvaXN4RkhKcHZDQ2lESjhTTzZSVjNlSWtveEFYZ3dUSWlVNzJ4c2xweFpEck1LNFZvc0xFNFhuazA3NjAKd3VRODNIVGd [...]
# type: kubernetes.io/tls

# ---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coloringresshttps
  namespace: color
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/backend-hostname: "be.cptdaks.org"
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "backend-tls"
spec:
  tls:
  - hosts:
    - fe.cptdaks.org
    secretName: frontend-tls
  rules:
  - host: fe.cptdaks.org
    http:
      paths:
      - path: /admin*
        backend:
          service:
            name: redsvc
            port:
              number: 443
        pathType: Prefix
      - path: /red
        backend:
          service:
            name: redsvc
            port:
              number: 443
        pathType: Exact
      - path: /admin*
        backend:
          service:
            name: redsvc
            port:
              number: 443
        pathType: Prefix

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coloringresshttpscs
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    # appgw.ingress.kubernetes.io/rewrite-rule-set: cs-rewrite-ruleset
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/backend-hostname: "be.cptdaks.org"
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "backend-tls"
spec:
  tls:
  - hosts:
      - fe.cptdaks.org
    secretName: frontend-tls
  rules:
  - host: fe.cptdaks.org
    http:
      paths:
      - path: /cs/*
        backend:
          service:
            name: redsvc
            port:
              number: 443
        pathType: Prefix
        
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coloringresshttpsdefault
  namespace: color
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/backend-hostname: "be.cptdaks.org"
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "backend-tls"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/ssoauth/"
spec:
  tls:
  - hosts:
    - fe.cptdaks.org
    secretName: frontend-tls
  rules:
  - host: fe.cptdaks.org
    http:
      paths:
      - path: /*
        backend:
          service:
            name: redsvc
            port:
              number: 443
        pathType: Prefix
