k8s/redapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: red
  labels:
    cbase: ss
---

apiVersion: v1
kind: Pod
metadata:
  namespace: red
  name: redapp
  labels:
    app: redapp
spec:
  containers:
  - image: cptdaks.azurecr.io/cpt/ss:1.0
    name: redapp
    ports:
    - containerPort: 8080
      protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: redapp
  namespace: red
spec:
  selector:
    app: redapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redapp
  namespace: red
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/waf-policy-for-path: /subscriptions/f474dec9-5bab-47a3-b4d3-e641dac87ddb/resourceGroups/cptdaks/providers/Microsoft.Network/ApplicationGatewayWebApplicationFirewallPolicies/cptdaksred
spec:
  rules:
  - host: red.cptdaks.org
    http:
      paths:
      - path: /
        backend:
          service:
            name: redapp
            port:
              number: 80
        pathType: Exact
